simple fixes
